--- a/DreamSchedulerApplication/Views/SequenceGenerator/GenerateSchedule.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/GenerateSchedule.cshtml
@@ -44,4 +44,4 @@
 
 </table>
 
-<p> @Html.ActionLink("Reset sequence", "ResetCustomSequence")  </p>
+<input type="button" value="Generate New Schedule" onclick="location.href='@Url.Action("ResetCustomSequence", "SequenceGenerator")'" />
