--- a/DreamSchedulerApplication/Views/SequenceGenerator/DefaultCourseSequence.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/DefaultCourseSequence.cshtml
@@ -4,20 +4,14 @@
     ViewBag.Title = "Course Sequence";
 }
 
-<h2>CourseSequence</h2>
+<h2>Course Sequence</h2>
 
 <table class="table">
 
     <caption style="margin-bottom: 30px; font-weight: bold">Course sequence</caption>
     <tr>
         <th>
-            Semester in sequence
-        </th>
-        <th>
-            Semester scheduled
-        </th>
-        <th>
-            Semester season
+            Semester
         </th>
         <th>
             Title
@@ -27,12 +21,6 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.SemesterInSequence)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Semester)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SemesterName)
             </td>
