--- a/DreamSchedulerApplication/Views/SequenceGenerator/DefaultCourseSequence.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/DefaultCourseSequence.cshtml
@@ -27,6 +27,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Course.Code)
             </td>
+            <td>
+                @Html.ActionLink("Details", "CourseDetails", "Student", new { code = item.Course.Code }, null)
+            </td>
         </tr>
     }
 
