--- a/DreamSchedulerApplication/Views/SequenceGenerator/StudentCourseSequence.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/StudentCourseSequence.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Custom Course Sequence";
 }
 
-<h2>CourseSequence</h2>
+<h2>Course Sequence</h2>
 
 <table class="table">
 
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Course.Code)
             </td>
             <td>
-                @Html.ActionLink("Details", "CourseDetails", "Student", new { code = item.Course.Code }, null)
+                @Html.ActionLink("Details", "CourseDetails", "Student", new { code = item.Course.Code, semesterName = item.SemesterName }, null)
             </td>
         </tr>
     }
