--- a/DreamSchedulerApplication/Views/SequenceGenerator/Constraints.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/Constraints.cshtml
@@ -6,6 +6,30 @@
 
 <h2>Constraints</h2>
 
+
+<p class="text-center"><a href="@Url.Action("Index", "AcademicRecord")" class="btn btn-danger" role="button">import your academic record</a></p>
+
+<div class="row">
+    <div class="col-sm-4">
+        <div class="alert alert-info" role="alert">
+            To build your sequence :
+            <br />
+            <br />
+            - Add constraints to each of your semester!
+            <br />
+            - Default sequence:  set number of course to 5 for 8 semesters
+
+        </div>
+    </div>
+    <div class="col-sm-4">
+
+    </div>
+    <div class="col-sm-4"></div>
+</div>
+
+
+
+
 @Html.ValidationSummary("", new { @class = "text-danger" })
 
 @using (Html.BeginForm())
@@ -18,14 +42,15 @@
         <table id="container">
             <tr>
                 <th>Semester</th>
-                <th>Number of Courses
+                <th>
+                    Number of Courses
                 </th>
             </tr>
             @Html.EditorForModel()
-        </table>  
-         
+        </table>
+
         <br />
-        <a href="" id="btnAdd">Add Semester</a>
+        <a class="btn btn-primary" href="" id="btnAdd">Add Semester</a>
 
         <div class="form-group">
             <div class="col-md-10">
@@ -42,7 +67,7 @@
                 var itemIndex = $("#container .listElement").length;
                 var semester = +$("#container tr:last-of-type .listElement input").val() + 1;
                 e.preventDefault();
-                var newItem = $("<tr><td class='listElement'><input type='text' id='" + itemIndex + "__Semester' name='[" + itemIndex + "].Semester'/ value='" + semester + "' readonly='readonly'></td><td><input type='text'  id='" + itemIndex + "__NumberOfCourses' name='[" + itemIndex + "].NumberOfCourses' /></tr>");
+                var newItem = $("<tr><td class='listElement'><input type='text' id='" + itemIndex + "__Semester' name='[" + itemIndex + "].Semester'/ value='" + semester + "' readonly='readonly'></td><td><input type='text' id='" + itemIndex + "__NumberOfCourses' name='[" + itemIndex + "].NumberOfCourses' /></tr>");
                 $("#container").append(newItem);
             });
         });
