--- a/DreamSchedulerApplication/Views/SequenceGenerator/DefaultCourseSequence.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/DefaultCourseSequence.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Course Sequence";
 }
 
-<h2>Course Sequence</h2>
+<h2 style="text-align: center">Course Sequence</h2>
 
 @{
     string CurrentSemester = "test";
 }
-<div class="row">
-    <div class="col-sm-4"></div>
-    <div class="col-sm-6">
+<div class="row" style="margin-top: 60px">
+    <div class="col-sm-6 col-md-offset-3">
         @foreach (var item in Model)
         {
             if (CurrentSemester != item.SemesterName)
@@ -60,31 +59,3 @@
     <div class="col-sm-4"></div>
 
 </div>
-<table class="table">
-
-    <caption style="margin-bottom: 30px; font-weight: bold">Course sequence</caption>
-    <tr>
-        <th>
-            Semester
-        </th>
-        <th>
-            Title
-        </th>
-        <th></th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SemesterName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.Code)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "CourseDetails", "Student", new { code = item.Course.Code, semesterName = item.SemesterName }, null)
-            </td>
-        </tr>
-    }
-
-</table>
