css update -new look for course details -small fixes

--- a/DreamSchedulerApplication/Views/SequenceGenerator/Constraints.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/Constraints.cshtml
@@ -14,9 +14,11 @@
             <br />
             - Add constraints to each of your semester!
             <br />
-            - <a href="@Url.Action("Index", "AcademicRecord")" style="font-weight: bold">Fill your academic record</a> to get a customized schedule!
             <br />
-            - <a href="@Url.Action("GenerateDefaultSequence", "SequenceGenerator")" style="font-weight: bold">Click here</a> to view default course sequence!
+            - <a class="btn-sm btn-default"  href="@Url.Action("Index", "AcademicRecord")" style="font-weight: bold">Fill your academic record</a> to get a customized schedule!
+            <br />
+            <br />
+            - <a class="btn-sm btn-default " href="@Url.Action("GenerateDefaultSequence", "SequenceGenerator")" style="font-weight: bold">Click here</a> to view default course sequence!
 
         </div>
     </div>
