--- a/DreamSchedulerApplication/Views/SequenceGenerator/StudentCourseSequence.cshtml
+++ b/DreamSchedulerApplication/Views/SequenceGenerator/StudentCourseSequence.cshtml
@@ -9,11 +9,11 @@
 @{
     string CurrentSemester = "test";
 }
-    <div>
-        <br />
-        <input type="button" class="btn btn-primary col-sm-2 col-md-offset-7" value="Generate New Schedule" onclick="location.href='@Url.Action("ResetCustomSequence", "SequenceGenerator")'" />
-    </div>
-    <div class="row">
+<div class="btn-block text-center">
+    <br />
+    <input type="button" class="btn btn-danger" value="Generate New Schedule" onclick="location.href='@Url.Action("ResetCustomSequence", "SequenceGenerator")'" />
+</div>
+<div class="row">
     <div class="col-sm-6 col-md-offset-3" style=" margin-top: 40px">
 
         @foreach (var item in Model)
